<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--Data item that holds the reminder details-->
        <variable
            name="reminderDataItem"
            type="com.udacity.project4.locationreminders.reminderslist.ReminderDataItem" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".locationreminders.ReminderDescriptionActivity">
        <!--TODO: add the design of the reminder details-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/pageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Reminder Details"
                android:textSize="@dimen/text_size_large"
                android:layout_marginTop="40sp"
                app:layout_constraintTop_toTopOf="@+id/motionLayout2"
                tools:layout_editor_absoluteX="4dp" />

            <TextView
                android:id="@+id/titleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title:"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/descriptionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <TextView
                android:id="@+id/locationView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Location:"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/latView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude:"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <TextView
                android:id="@+id/longView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Longitude:"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.8" />

            <androidx.constraintlayout.motion.widget.MotionLayout
                android:id="@+id/motionLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutDescription="@xml/main_scene">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:text="reminderTitle"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:text="reminderDescription"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:text="reminderDescription"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:text="reminderDescription"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:text="reminderDescription"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

            </androidx.constraintlayout.motion.widget.MotionLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>