<resources>
    <string name="app_name">Location Reminders</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="reminder_desc">Description</string>
    <string name="reminder_location">Reminder Location</string>
    <string name="save">Save</string>
    <string name="reminder_saved">Reminder Saved!</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_location_reminder_app">Welcome to the location reminder app</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Location Reminder</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>
    <string name="geofences_removed">geofence was removed</string>
    <string name="geofences_not_removed">geofence was not removed</string>
    <string name="unknown_geofence_error">Unknown geofence error</string>
    <string name="geofences_added">geofence added</string>
    <string name="permission_foreground_denied_explanation">denided</string>
    <string name="permission_background_denied_explanation">background denied</string>
    <string name="nothing_is_denied">nothing is denied</string>
    <string name="require_backgound_permission">This app requires background location permission, please go to settings and choose the \"allow all the times\" option</string>
    <string name="require_permission">"Please go to the location permissions settings and choose \"allow all the times\" "</string>
    <string name="maps_api_key">AIzaSyD59yjKE3aTQmoE9QMJQ06RKOC6HUipGRs</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="to_login">directs you to the login page</string>
    <string name="gep_permission_denied_explanation">Please grant background permissions to save geofence</string>
</resources>
